--- a/site/styles.css
+++ b/site/styles.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    background-color:#F768D3;
+    background-color:#f2b2ac;
     opacity: 100%;
     font-size: 115%;
 }
@@ -8,6 +8,9 @@ h1 {
     text-align: center;
     opacity: 60%;
     background-color: antiquewhite;
+text-align: center;
+	text-transform: uppercase;
+	font-size: 22px;
     ;
 }
 
@@ -15,4 +18,12 @@ section ol {
     color: rgb(238, 224, 69);
     list-style: none;   
 
+}
+img{
+	display: block;
+	width: 70%;
+	border: solid 2px #000000;
+	margin: 0 auto;
+	
+	
 }
