--- a/site/styles.css
+++ b/site/styles.css
@@ -1,4 +1,9 @@
+*{
+    box-sizing: border-box;
+}
 body{
+    min-height: 100vh;
+    font-family: "PT Serif" Arial, Helvetica, sans-serif;
     text-align: center;
     background-color:#f2b2ac;
     opacity: 100%;
@@ -9,11 +14,52 @@ header {
     opacity: 60%;
     background-color: antiquewhite;
 	text-transform: uppercase;
-	font-size: 22px;  
+	font-size: 22px;     
 }
 header h1 {
-padding-top: 40px; 
-}
+    padding-top: 40px; 
+    }
+.list {
+    position:absolute;
+    top: 20%;
+    left: 30%;
+    transform: translate(-50, -50%);
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    max-width: 800px;
+}    
+
+.card {
+    min-width: 150px;
+    min-height: 150px;
+    background: antiquewhite;
+    opacity: 60%;
+    border-radius: 30px;
+    padding: 1rem 1.5rem;
+    box-shadow: -0.5rem 0 3rem #7F8487;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: 0.2s;
+    margin: 30px;
+  }
+
+  .footer{
+    position:sticky;
+    top: 100%;
+    block-size: 120px;
+    opacity: 60%;
+    background-color: antiquewhite;
+	text-transform: uppercase;
+	font-size: 22px; 
+    padding: 40px;
+  }
+/*
+
 
 nav ul {
     padding-top: 20px;
@@ -27,8 +73,8 @@ nav li {
 }
 
 nav ul li a {
-    text-decoration: none;
     
+    text-decoration: none;
 }
 nav ul li a:hover{
     background-color:green ;
@@ -43,7 +89,6 @@ img{
 	display: block;
 	width: 70%;
 	border: solid 2px #000000;
-	margin: 0 auto;
-
-	
+	margin: 0 auto;	
 }
+*/
